Import of CHIM/Plack-Middleware-Debug-Redis-0.02 from CPAN.
gitpan-cpan-distribution: Plack-Middleware-Debug-Redis
gitpan-cpan-version:      0.02
gitpan-cpan-path:         CHIM/Plack-Middleware-Debug-Redis-0.02.tar.gz
gitpan-cpan-author:       CHIM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,9 @@ abstract: 'Extend Plack::Middleware::Debug with Redis panels'
 author:
   - 'Anton Gerasimov <chim@cpan.org>'
 build_requires:
+  HTTP::Message: 0
+  Plack: 0.9979
+  Test::MockObject: 0
   Test::More: 0.98
   Test::Pod: 1.22
 configure_requires:
@@ -19,6 +22,7 @@ no_index:
     - t
     - inc
 requires:
+  Plack: 0.9979
   Plack::Middleware::Debug: 0
   Redis: 1.955
   perl: 5.010001
@@ -26,4 +30,4 @@ requires:
 resources:
   bugtracker: https://github.com/Wu-Wu/Plack-Middleware-Debug-Redis/issues
   repository: https://github.com/Wu-Wu/Plack-Middleware-Debug-Redis
-version: 0.01
+version: 0.02
